--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "echarts-liquidfill": "^2.0.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-seamless-scroll": "^1.1.21",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
